@@ -1,3 +1,8 @@
+2018-03-30 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSDocument.m (-revertToContentsOfURL:ofType:error:): Add
+	override calls for deprecated methods.
+
 2018-03-29  Graham Lee  <graham@iamleeg.com>
 
 	* Source/NSWindowController.m: gsdoc
